--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@octokit/request": "^5.6.0"
   }
 }
